# eloqstore

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml  sdk-checks.yml  sdk-release.yml
benchmark/: CMakeLists.txt  eloq_store_bm.cc  eloq_store_bm.h  interference_bench.cpp  main.cpp  opts_interference.ini
cmake/: dependencies.cmake
db_stress/: README.md  crash_test.py  db_stress_gflags.cpp
docs/: refactor_del_dir.md  vllm_kvcache_guide.md  zero_copy_impl.md  zero_copy_metadata.md  zero_copy_metadata_impl.md  zero_copy_read.md
docs/architecture/: 01-overview.md  02-runtime-and-lifecycle.md  03-request-api.md  04-execution-model.md  05-btree-and-page-formats.md  06-persistence-and-recovery.md  07-io-stack.md  08-data-lifecycle.md  09-large-values-zero-copy.md  10-bindings-and-embedding.md  README.md
docs/design/: io_qos.md  io_qos_impl_plan.md  python_sdk.md
docs/release/: sdk_release.md
ffi/include/: eloqstore_capi.h
ffi/src/: eloqstore_capi.cpp
include/: async_io_manager.h  cloud_storage_service.h  common.h  eloq_store.h  eloqstore_metrics.h  error.h  fail_point.h  file_gc.h  global_registered_memory.h  io_buffer_ref.h  io_string_buffer.h  kv_options.h  replayer.h  sdk_runtime.h  standby_service.h  test_utils.h  types.h  utils.h  write_tree_stack.h
include/storage/: data_page.h  data_page_builder.h  index_page_manager.h  mem_cached_page.h  mem_index_page.h  object_store.h  page_manager.h  page_mapper.h  root_meta.h  shard.h
include/tasks/: archive_crond.h  background_write.h  batch_write_task.h  list_standby_partition_task.h  prewarm_task.h  read_task.h  reopen_task.h  scan_task.h  task.h  task_manager.h  write_task.h
python/: README.md  build_hooks.py  pyproject.toml  test_kvcache_sdk_smoke.py
python/examples/: basic_usage.py  disk_persistence.py  ini_branch_usage.py
python/src/eloqstore/: __init__.py  _errors.py  _ffi.py  client.py  vllm_connector.py
python/tests/: test_client_integration.py  test_import.py
rust/: README.md
rust/eloqstore/: Cargo.toml
rust/eloqstore-sys/: Cargo.toml  README.md  build.rs
rust/eloqstore-sys/ffi/include/: eloqstore_capi.h
rust/eloqstore-sys/ffi/src/: eloqstore_capi.cpp
rust/eloqstore-sys/src/: embedded_lib.rs  lib.rs
rust/eloqstore/examples/: basic_usage.rs  cloud_storage.rs  embedded_branch_ini.rs
rust/eloqstore/src/: error.rs  request.rs  store.rs
rust/eloqstore/tests/: integration_test.rs  simple_bench.rs
scripts/: install_dependency_ubuntu2404.sh  io_calibration_sweep.sh
src/: async_io_manager.cpp  cloud_storage_service.cpp  eloq_store.cpp  eloqstore_module.cpp  file_gc.cpp  global_registered_memory.cpp  io_string_buffer.cpp  kv_options.cpp  replayer.cpp  standby_service.cpp  test_utils.cpp  types.cpp
src/sdk_runtime/: common.cpp  internal.h  manager.cpp  worker.cpp
src/storage/: cloud_backend.cpp  data_page.cpp  data_page_builder.cpp  index_page_builder.cpp  index_page_manager.cpp  mem_cached_page.cpp  object_store.cpp  page_manager.cpp  page_mapper.cpp  root_meta.cpp  shard.cpp
src/tasks/: archive_crond.cpp  background_write.cpp  batch_write_task.cpp  prewarm_task.cpp  read_task.cpp  reopen_task.cpp  scan_task.cpp  task.cpp  task_manager.cpp  write_task.cpp
tests/: CMakeLists.txt  batch_write.cpp  branch_filename_parsing.cpp  branch_operations.cpp  chore.cpp  cloud.cpp  cloud_term.cpp  common.cpp  common.h  data_page_cache.cpp  data_page_large_value.cpp  eloq_store_test.cpp  filename_parsing.cpp  gc.cpp  global_registered_memory.cpp  io_qos.cpp  io_string_buffer.cpp  iouring_pinned_lookup.cpp  iouring_tail_scratch.cpp  large_value_benchmark.cpp  large_value_concurrency.cpp  large_value_e2e.cpp  large_value_fault_injection.cpp  large_value_gc.cpp  large_value_main.cpp  manifest.cpp  manifest_payload.cpp  persist.cpp  replayer_term.cpp  scan.cpp  segment_allocator.cpp  segment_compact.cpp  standby.cpp  write_task.cpp
tools/: manifest_check_tool.cpp
