set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-parentheses -Wno-error")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DFAULT_INJECTOR")

option(WITH_ROCKSDB "With rocksdb" OFF)
if (WITH_ROCKSDB)
    find_path(ROCKSDB_INCLUDE_PATH NAMES rocksdb/db.h)
    if (NOT ROCKSDB_INCLUDE_PATH)
    	message(FATAL_ERROR "Fail to find RocksDB include path")
    endif ()
    include_directories(${ROCKSDB_INCLUDE_PATH})

    find_library(ROCKSDB_LIB NAMES rocksdb)
    if (NOT ROCKSDB_LIB)
        message(FATAL_ERROR "Fail to find RocksDB lib path")
    endif()
    set(DYNAMIC_LIB ${DYNAMIC_LIB} ${ROCKSDB_LIB})

    add_compile_definitions(WITH_ROCKSDB)
endif()

# brpc is built in-tree by the top-level CMakeLists (pinned in
# cmake/dependencies.cmake). Linking the static archive needs its private
# dependencies (brpc's pkg-config list) at the final link.
find_library(PROTOBUF_LIB protobuf REQUIRED)
find_library(PROTOC_LIB protoc REQUIRED)
find_library(LEVELDB_LIB leveldb REQUIRED)
set(BRPC_LIB brpc-static OpenSSL::SSL OpenSSL::Crypto
    ${PROTOBUF_LIB} ${PROTOC_LIB} ${LEVELDB_LIB} z dl)
include_directories(${BRPC_INCLUDE_PATH})
set(DYNAMIC_LIB ${DYNAMIC_LIB} ${BRPC_LIB})

find_path(GFLAGS_INCLUDE_PATH gflags/gflags.h)
find_library(GFLAGS_LIBRARY NAMES gflags libgflags)
if ((NOT GFLAGS_INCLUDE_PATH) OR (NOT GFLAGS_LIBRARY))
    message(FATAL_ERROR "Fail to find gflags")
endif ()
include_directories(${GFLAGS_INCLUDE_PATH})


option(HAVE_RANDOM_R "Whether have random_r" ON)
if(HAVE_RANDOM_R)
    add_definitions(-DHAVE_RANDOM_R)
endif()

set(ELOQ_STORE_BM_SOURCES
    obj_gen.cc
    eloq_store_bm.cc)

if (WITH_ROCKSDB)
    set(ELOQ_STORE_BM_SOURCES
        ${ELOQ_STORE_BM_SOURCES}
        random.cc
        rocksdb_bm.cc)
endif()

add_executable(eloqstore_benchmark main.cpp ${ELOQ_STORE_BM_SOURCES})
target_link_libraries(eloqstore_benchmark ${DYNAMIC_LIB} eloqstore ${GFLAGS_LIBRARY})

add_executable(load_bench load_bench.cpp)
target_link_libraries(load_bench eloqstore ${BRPC_LIB} ${GFLAGS_LIBRARY})

add_executable(simple_bench simple_bench.cpp)
target_link_libraries(simple_bench eloqstore ${BRPC_LIB} ${GFLAGS_LIBRARY})

# IO QoS interference benchmark (docs/design/io_qos.md, plan commit 3).
add_executable(interference_bench interference_bench.cpp)
target_link_libraries(interference_bench eloqstore ${GFLAGS_LIBRARY})

add_executable(simple_test simple_test.cpp)
target_link_libraries(simple_test eloqstore ${BRPC_LIB} ${GFLAGS_LIBRARY})

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

install(TARGETS eloqstore_benchmark
        RUNTIME DESTINATION bin)
