[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "eloqstore"
version = "1.1.0"
description = "Python SDK for EloqStore"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSL-2.0 OR AGPL-3.0-only"}
authors = [
  {name = "EloqData"},
]
dependencies = []

[tool.hatch.build]
artifacts = [
  "build/native/libeloqstore_capi.so",
]

[tool.hatch.build.hooks.custom]
path = "build_hooks.py"

[tool.hatch.build.targets.wheel]
packages = ["src/eloqstore"]
pure-python = false
force-include = { "build/native/libeloqstore_capi.so" = "eloqstore/.libs/libeloqstore_capi.so" }

[tool.hatch.build.targets.sdist]
include = [
  "src/eloqstore",
  "README.md",
  "pyproject.toml",
  "build_hooks.py",
]
