[package]
name = "eloqstore"
version = "1.1.1"
edition = "2024"
description = "High-level Rust SDK for EloqStore"
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/eloqdata/eloqstore"
homepage = "https://www.eloqdata.com"
keywords = ["storage", "kv", "database", "embedded", "io-uring"]
categories = ["database", "api-bindings"]
include = [
  "Cargo.toml",
  "README.md",
  "src/**",
  "examples/**",
  "tests/**",
]

[dependencies]
eloqstore-sys = { version = "1.1.1", path = "../eloqstore-sys" }
